# cpp_conan_artifactory

./: README.md  artifactory  git
consumerLib/: CMakeLists.txt  conanfile.txt  main.cpp
producerLib/: conanfile.py
producerLib/src/: CMakeLists.txt  producerLib.cpp  producerLib.h
unitTest/: CMakeLists.txt  conanfile.txt  extras.txt  impFromJfrogLib.cpp  impFromJfrogLib.h  main.cpp  my_config.json  sonar-project.properties
unitTest/cunit/: basicTest.cpp
